# MITP_8lab

./: МИТП_лр8.sln
МИТП_лр8/: .flake8  bad_code.py  pyproject.toml  requests.py  МИТП_лр8.pyproj
