[project]
name = "mitp-lab8"
version = "0.1.0"
description = ""
authors = [
    {name = "ekaterina_zvereva",email = "[ykabra123456@gmail.com]"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
